--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -12,7 +12,15 @@
 
     @include width-1200 {
       flex-wrap: wrap;
+    }
+
+    @include width-823 {
       gap: 0;
+      row-gap: 20px;
+    }
+
+    @include width-568 {
+  justify-content: center;
     }
   }
 
@@ -20,30 +28,23 @@
     max-width: 200px;
     width: 100%;
 
-    @include width-1200 {
-      max-width: 33.333%;
-    }
-
     @include width-823 {
       max-width: 50%;
     }
 
-    &--addres {
-      @include width-1200 {
-        max-width: 100%;
-        border-bottom: 1px solid #dae4e9;
-      }
+    @include width-568 {
+      max-width: 90%;
     }
 
     &:last-child {
       max-width: 270px;
 
-      @include width-1200 {
-        max-width: 33.333%;
+      @include width-823 {
+        max-width: 50%;
       }
 
-      @include width-823 {
-        max-width: 100%;
+      @include width-568 {
+        max-width: 90%;
       }
     }
   }
@@ -70,17 +71,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap-reverse;
     min-height: 90px;
 
     @include width-823 {
-      flex-direction: column-reverse;
       justify-content: center;
     }
   }
 
   &__links {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    flex-wrap: wrap;
   }
 
   &__link,
@@ -98,7 +100,7 @@
   }
 
   &__elem:not(:last-child) {
-    margin-right: 30px;
+    margin-right: 32px;
   }
 
   &__elem:not(:first-child)::before {
@@ -132,9 +134,7 @@
 }
 
 .form {
-  &__inner {
-    display: flex;
-  }
+  display: flex;
 
   &__input,
   &__btn {
@@ -148,6 +148,10 @@
     position: relative;
     max-width: 170px;
     width: 100%;
+
+    @include width-568 {
+      max-width: 100%;
+    }
   }
 
   &__input {
