--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,6 +1,16 @@
 @font-face {
   font-family: 'Rubik';
   src: local('Rubik'),
+    url('../fonts/Rubik/Rubik-Light.woff2') format('woff2'),
+    url('../fonts/Rubik/Rubik-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Rubik';
+  src: local('Rubik'),
     url('../fonts/Rubik/Rubik-Regular.woff2') format('woff2'),
     url('../fonts/Rubik/Rubik-Regular.woff') format('woff');
   font-weight: 400;
