--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -17,6 +17,24 @@ $provincialPink: #fef7f0;
 $halfSpanishWhite: #feefe2;
 $alabaster: #f8f8f8;
 
+%sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
+}
+
+%Rubik-300 {
+  font-family: 'Rubik', sans-serif;
+  font-weight: 300;
+}
+
 %Rubik-400 {
   font-family: 'Rubik', sans-serif;
   font-weight: 400;
