--- a/app/scss/components/_banner.scss
+++ b/app/scss/components/_banner.scss
@@ -65,32 +65,32 @@
     @include width-823 {
       bottom: 10px;
     }
-  }
 
-  .slick-dots li:not(:last-child) {
-    margin-right: 12px;
-  }
+    li:not(:last-child) {
+      margin-right: 12px;
+    }
 
-  .slick-dots button {
-    padding: 5px 11px 4px;
-    min-width: 29px;
-    border-radius: 20px;
-    font-size: 11px;
-    color: $blueDianne;
-    font-weight: 500;
-    background-color: $white;
-    opacity: 0.3;
-    transition-property: opacity;
-  }
+    button {
+      padding: 5px 11px 4px;
+      min-width: 29px;
+      border-radius: 20px;
+      font-size: 11px;
+      color: $blueDianne;
+      font-weight: 500;
+      background-color: $white;
+      opacity: 0.3;
+      transition-property: opacity;
+    }
 
-  .slick-dots button:hover,
-  .slick-active button {
-    opacity: 1;
+    button:hover,
+    .slick-active button {
+      opacity: 1;
+    }
   }
 
   &__text {
     max-width: 420px;
-    padding: 216px 0 280px;
+    padding: 216px 0 284px;
 
     @include width-1200 {
       padding: 135px 0;
@@ -130,8 +130,8 @@
     }
 
     @include width-823 {
-      margin-bottom: 15px;
-      font-size: 30px;
+      margin-bottom: 10px;
+      font-size: 26px;
     }
   }
 
@@ -151,6 +151,121 @@
   &__image {
     height: 100%;
     width: 100%;
+    margin: 0 auto;
     object-fit: contain;
+
+    @include width-823 {
+      width: 80%;
+    }
+  }
+
+  &__features {
+    display: flex;
+    justify-content: space-around;
+    @extend %DMS-700;
+    background-color: $provincialPink;
+
+    @include width-823 {
+      flex-wrap: wrap;
+    }
+  }
+
+  &__item {
+    position: relative;
+    max-width: 590px;
+    width: 100%;
+
+    &::before {
+      content: '';
+      position: absolute;
+      background-color: #e8e4df;
+    }
+
+    &:not(:first-child)::before {
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 1px;
+    }
+
+    @include width-823 {
+      max-width: 50%;
+
+      &:last-child::before {
+        width: 200%;
+        height: 1px;
+        left: -50%;
+      }
+    }
+
+    @include width-568 {
+      max-width: 100%;
+
+      &:not(:first-child)::before {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+      }
+    }
+  }
+
+  &__heading {
+    color: $tundora;
+
+    @include width-1200 {
+      font-size: 16px;
+    }
+  }
+
+  &__wrap {
+    position: relative;
+    max-width: 335px;
+    min-height: 170px;
+    padding: 37px 15px 15px 100px;
+    margin: 0 auto;
+
+    @include width-1200 {
+      padding: 20px 15px 15px 80px;
+      min-height: 145px;
+    }
+
+    @include width-823 {
+      padding: 20px 5px 10px 80px;
+      min-height: 120px;
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 45px;
+      left: 15px;
+      width: 55px;
+      height: 55px;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
+    }
+
+    &--support::before {
+      background-image: url('../images/icons/support.svg');
+    }
+
+    &--delivery::before {
+      background-image: url('../images/icons/delivery.svg');
+    }
+
+    &--payment::before {
+      background-image: url('../images/icons/payment.svg');
+    }
+
+    p {
+      font-weight: 400;
+      color: $scorpion;
+
+      @include width-1200 {
+        font-size: 15px;
+      }
+    }
   }
 }
