--- a/app/scss/components/_new.scss
+++ b/app/scss/components/_new.scss
@@ -1,5 +1,9 @@
 .new {
   padding: 54px 0 47px;
+
+  @include width-823 {
+    padding: 90px 0 47px;
+  }
   
   @include width-568 {
     padding-bottom: 16px;
@@ -7,11 +11,15 @@
 
   &__title {
     margin-bottom: 6px;
+
+    @include width-1200 {
+      margin-bottom: 50px;
+    }
   }
 
   &__list {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     flex-wrap: wrap;
     row-gap: 35px;
     column-gap: 30px;
