--- a/app/scss/components/_product-card.scss
+++ b/app/scss/components/_product-card.scss
@@ -1,9 +1,8 @@
 .product-card {
   max-width: 270px;
   width: 100%;
-  padding: 15px 5px 35px;
+  padding: 15px 5px 31px;
   position: relative;
-  min-height: 380px;
   border-radius: 10px;
   text-align: center;
   overflow: hidden;
@@ -45,6 +44,10 @@
     font-size: 16px;
   }
 
+  &__rate {
+    display: none;
+  }
+
   &__link {
     display: inline-block;
     transition: transform 0.2s ease-out;
@@ -59,6 +62,13 @@
     font-weight: 700;
   }
 
+  &__box {
+    p {
+      display: none;
+      text-align: left;
+    }
+  }
+
   &__tools {
     display: flex;
     justify-content: space-between;
@@ -69,8 +79,15 @@
     max-width: 165px;
     width: 100%;
     margin: 0 auto;
-    transform: translateY(-220px);
+    transform: translateY(-300px);
     transition: transform 0.3s ease;
+
+    svg {
+      width: 22px;
+      height: 22px;
+      fill: #a3bbc8;
+      transition: fill 0.3s ease;
+    }
   }
 
   &__toggle {
@@ -82,6 +99,7 @@
     border-radius: 50%;
     background-color: $white;
     transition: background-color 0.3s ease;
+    box-shadow: 0px 6px 47px 3px rgba(37, 37, 37, 0.2);
 
     &:hover {
       background-color: $casper;
@@ -90,12 +108,5 @@
         fill: $white;
       }
     }
-  }
-
-  & svg {
-    width: 22px;
-    height: 22px;
-    fill: #a3bbc8;
-    transition: fill 0.3s ease;
   }
 }
